fix: Preflight error